# tetris

./: .clang-format  .editorconfig  CMakeLists.txt
include/: canvas.hpp  color.hpp
scripts/: build.sh  clean.sh  run.sh
src/: canvas.cpp  color.cpp  main.cpp
